[gd_scene load_steps=31 format=3 uid="uid://crvwdmp05ujb8"]

[ext_resource type="Texture2D" uid="uid://4cr4m0os7enb" path="res://assets/gridf.png" id="1_mx57q"]
[ext_resource type="Script" uid="uid://d0u8hvnevdeub" path="res://src/title_screen.gd" id="1_u3a1t"]
[ext_resource type="PackedScene" uid="uid://ce4f4u57jqa5y" path="res://level.tscn" id="2_u3a1t"]
[ext_resource type="FontFile" uid="uid://c7tmixruws4h5" path="res://assets/Blazma-Regular.ttf" id="3_vayli"]
[ext_resource type="Texture2D" uid="uid://ddceljcpm4y81" path="res://assets/active_btn.png" id="4_vedi7"]
[ext_resource type="Texture2D" uid="uid://bjmy5f4rxl8fv" path="res://assets/Default.png" id="5_odwn3"]
[ext_resource type="Texture2D" uid="uid://b7k6sktmveh83" path="res://assets/hover_btn.png" id="6_tlpw0"]
[ext_resource type="PackedScene" uid="uid://cn6r3p51pbj3i" path="res://signal_graph.tscn" id="7_fxnhw"]
[ext_resource type="PackedScene" uid="uid://dy8c3o1ybfrwy" path="res://src/crt.tscn" id="7_odwn3"]
[ext_resource type="Script" uid="uid://bpo78me2lvaxo" path="res://graph_config.gd" id="8_skmr6"]
[ext_resource type="Resource" uid="uid://3as6t0bx3i0y" path="res://src/success_graph.tres" id="9_a8ovd"]
[ext_resource type="Script" uid="uid://c4anwulrallu3" path="res://oscillator.gd" id="10_vltpm"]
[ext_resource type="Resource" uid="uid://cosuhir85x3cc" path="res://src/result_graph.tres" id="11_a8ovd"]
[ext_resource type="Resource" uid="uid://31prlxvjne65" path="res://src/error_graph.tres" id="12_vltpm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6ron6"]
texture = ExtResource("4_vedi7")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_036v4"]
texture = ExtResource("5_odwn3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fxnhw"]
texture = ExtResource("6_tlpw0")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[sub_resource type="Animation" id="Animation_1ri5t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_dhlin"]
resource_name = "pulse"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jap5b"]
_data = {
&"RESET": SubResource("Animation_1ri5t"),
&"pulse": SubResource("Animation_dhlin")
}

[sub_resource type="Shader" id="Shader_vltpm"]
code = "shader_type canvas_item;

uniform float amplitude : hint_range(0.0, 200.0) = 10.0; // Смещение в пикселях
uniform float speed     : hint_range(0.0, 5.0)   = 1.0;  // Скорость
uniform float phase                           = 0.0;     // Для рассинхронизации нескольких спрайтов

void vertex() {
    float t = TIME * speed + phase;
    float offset_x = sin(t) * amplitude;
    float offset_y = cos(t * 1.3) * amplitude;

    // Сдвигаем весь прямоугольник спрайта в локальных пикселях
    VERTEX += vec2(offset_x, offset_y);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_616sk"]
shader = SubResource("Shader_vltpm")
shader_parameter/amplitude = 10.000000475
shader_parameter/speed = 1.50000007125
shader_parameter/phase = 0.0

[sub_resource type="Shader" id="Shader_u3a1t"]
code = "shader_type canvas_item;

uniform float amplitude : hint_range(0.0, 200.0) = 10.0; // Смещение в пикселях
uniform float speed     : hint_range(0.0, 5.0)   = 1.0;  // Скорость
uniform float phase                           = 0.0;     // Для рассинхронизации нескольких спрайтов

void vertex() {
    float t = TIME * speed + phase;
    float offset_x = sin(t) * amplitude;
    float offset_y = cos(t * 1.3) * amplitude;

    // Сдвигаем весь прямоугольник спрайта в локальных пикселях
    VERTEX += vec2(offset_x, offset_y);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gc8o6"]
shader = SubResource("Shader_u3a1t")
shader_parameter/amplitude = 10.000000475
shader_parameter/speed = 2.000000095
shader_parameter/phase = 0.0

[sub_resource type="Resource" id="Resource_u3a1t"]
script = ExtResource("10_vltpm")
freq = 7.0
phase_offset = 0.5
metadata/_custom_type_script = "uid://c4anwulrallu3"

[sub_resource type="Resource" id="Resource_bgd1n"]
script = ExtResource("8_skmr6")
oscillators = Array[ExtResource("10_vltpm")]([SubResource("Resource_u3a1t")])
line = ExtResource("9_a8ovd")
metadata/_custom_type_script = "uid://bpo78me2lvaxo"

[sub_resource type="Resource" id="Resource_vltpm"]
script = ExtResource("10_vltpm")
wave_type = 3
amplitide = 0.6
freq = 4.0
metadata/_custom_type_script = "uid://c4anwulrallu3"

[sub_resource type="Resource" id="Resource_um11b"]
script = ExtResource("8_skmr6")
oscillators = Array[ExtResource("10_vltpm")]([SubResource("Resource_vltpm")])
line = ExtResource("11_a8ovd")
metadata/_custom_type_script = "uid://bpo78me2lvaxo"

[sub_resource type="Resource" id="Resource_os3mc"]
script = ExtResource("10_vltpm")
wave_type = 1
amplitide = 0.2
freq = 10.0
metadata/_custom_type_script = "uid://c4anwulrallu3"

[sub_resource type="Resource" id="Resource_l76ay"]
script = ExtResource("8_skmr6")
oscillators = Array[ExtResource("10_vltpm")]([SubResource("Resource_os3mc")])
line = ExtResource("12_vltpm")
metadata/_custom_type_script = "uid://bpo78me2lvaxo"

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_u3a1t")
level_scene = ExtResource("2_u3a1t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Back" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(9.024516e-08, 0.051215276, 0.08368423, 1)
metadata/_edit_lock_ = true

[node name="Grid" type="TextureRect" parent="CanvasLayer"]
modulate = Color(1, 1, 1, 0.21568628)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_mx57q")
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="StartButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = 196.0
offset_right = 192.0
offset_bottom = 322.52692
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(190, 62)
focus_mode = 0
theme_override_fonts/font = ExtResource("3_vayli")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxTexture_6ron6")
theme_override_styles/pressed = SubResource("StyleBoxTexture_036v4")
theme_override_styles/hover = SubResource("StyleBoxTexture_fxnhw")
text = "New Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/StartButton"]
libraries = {
&"": SubResource("AnimationLibrary_jap5b")
}
autoplay = "pulse"

[node name="LevelLabel" type="Label" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_616sk")
offset_left = 112.0
offset_top = 28.0
offset_right = 1132.0
offset_bottom = 542.0
theme_override_colors/font_color = Color(0.92182696, 0.99999696, 0.50211465, 1)
theme_override_colors/font_outline_color = Color(0.7490196, 0.78039217, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("3_vayli")
theme_override_font_sizes/font_size = 350
text = "Sync"
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_gc8o6")
offset_left = 920.0
offset_top = 24.0
offset_right = 2067.0
offset_bottom = 538.0
theme_override_colors/font_color = Color(1, 0.56743807, 0.99001366, 1)
theme_override_colors/font_outline_color = Color(0.8780115, 0.0006434119, 0.8822325, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("3_vayli")
theme_override_font_sizes/font_size = 350
text = "wave"
vertical_alignment = 1

[node name="Graph" parent="CanvasLayer" instance=ExtResource("7_fxnhw")]
offset_left = -32.0
offset_top = 484.0
offset_right = 1952.0
offset_bottom = 708.0
color = Color(0.17, 0.17, 0.17, 0)
max_amplitude = 1.5
graphs = Array[ExtResource("8_skmr6")]([SubResource("Resource_bgd1n"), SubResource("Resource_um11b"), SubResource("Resource_l76ay")])
draw_grid = false

[node name="BestResultLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -172.0
offset_right = 312.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(288, 88)
theme_override_colors/font_color = Color(0.11372549, 0.9098039, 0.44313726, 1)
theme_override_colors/font_outline_color = Color(0.057600003, 0.48, 0.22656003, 0.76862746)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("3_vayli")
theme_override_font_sizes/font_size = 73
text = "Best score 1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestLevelLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -308.0
offset_top = -92.0
offset_right = 312.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(288, 88)
theme_override_colors/font_color = Color(0.14509805, 0.972549, 0.20784314, 1)
theme_override_colors/font_outline_color = Color(0.09019608, 0.5529412, 0.11764706, 0.68235296)
theme_override_constants/outline_size = 17
theme_override_fonts/font = ExtResource("3_vayli")
theme_override_font_sizes/font_size = 56
text = "Max level 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RunInfo" type="Label" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1216.0
offset_top = 196.0
offset_right = 1482.0
offset_bottom = 324.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_vayli")
theme_override_font_sizes/font_size = 40
text = "Level 10
Score 100000"
vertical_alignment = 1

[node name="CRT" parent="." instance=ExtResource("7_odwn3")]
